CHANGES

Trunk
	SIGINT handling for unit count.

	Fix help formatting error.

	Change cpp markup to text instead of textonly.

	Generate internal tokens for indexes.

	Change hidden --extended option to public --literal option.

	Move --xml-encoding to help section dealing with output srcML settings.

	Short flag for --extract-all in srcml2src has been changed from -e to -a.

	New status 16 for prematurely terminated input lists.

	For multiple input files, the first SIGINT signal lets the current file finish.
	Multiple SIGINT signals allows the default behavior.

	SIGUSR1 now toggles verbose setting.

	New call check mechanism.

	Allow specification of attributes on outer unit of compound srcML document, e.g.,
	directory, filename, version.

	Markup macro arguments.

	Markup macro name.

	Allow for access specifier on classes, e.g., private class A {}.

Trunk
	Default (in all cases) is now ISO-8859-1 for input format.  Changes default
	in libxml2 version.

	Fix wrong return code on expand in srcml2src.

	Add options --cpp_markup_if0 and --cpp_textonly_if0 for controlling whether
	cpp #else sections are parsed and marked up.  --cpp_textonly_if0 is default.

	Change option --cpp_nomark_else to --cpp_textonly_else and add --cpp_markup_else
	for controlling whether cpp #else sections are parsed and marked.

	Fix new cppmode and missing #if.

	Add option --cpp-nomark-else for controlling whether cpp #else sections are
	parsed and marked.

	Fix skipping of #if 0 blocks regression caused by handling of #else sections.

	Use partial cppmode entity handling.

	Fix for no newline before EOF on preprocessor line.

	Start of handling of partial entities in #if #else #end sections.

	Fix detection of #ifdef and #ifndef for storing cppmode.

	A statement following a preprocessor else was getting ignored.  Since we were
	skipping all parsing after an else (until the endif) this was not a problem.
	However, now that we are moving to allowing parsing of the else part, this